# libuvc_cam

./: CMakeLists.txt  README.md  example.rules  package.xml
config/: leopard_imaging_gw_5400.yaml  logitech_c920.yaml
include/libuvc_cam/: libuvc_cam.hpp  libuvc_cam_node.hpp
launch/: leopard_imaging_gw_5400.launch.xml  logitech_c920.launch.xml
src/: libuvc_cam.cpp  libuvc_cam_node.cpp
